# betabot

betabot_nav_amcl/: CMakeLists.txt  README.md  package.xml
betabot_nav_amcl/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
betabot_nav_amcl/launch/: amcl.launch  my_world.launch
betabot_obstacles_avoider/: CMakeLists.txt  README.md  package.xml  setup.py
betabot_obstacles_avoider/launch/: betabot_obstacles_avoider.launch
betabot_obstacles_avoider/scripts/: avoider_run.py
betabot_square_away/: CMakeLists.txt  README.md  package.xml  setup.py
betabot_square_away/launch/: betabot_square_away.launch
betabot_square_away/scripts/: square_run.py
